Fixed SonarLint warnings. Custom exception classes.