@@ -1,6 +1,7 @@
 package com.bookservice.gametimebooking.service;
 
 import com.bookservice.gametimebooking.dto.CustomerDto;
+import com.bookservice.gametimebooking.exceptions.CustomerNotFoundException;
 import com.bookservice.gametimebooking.mapper.CustomerMapper;
 import com.bookservice.gametimebooking.model.Customer;
 import com.bookservice.gametimebooking.repository.CustomerRepository;
@@ -9,7 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -18,6 +18,7 @@ public class CustomerService {
 
     private CustomerRepository customerRepository;
     private CustomerMapper customerMapper;
+    private static final String CUSTOMER_NOT_FOUND_ERROR_MESSAGE = "Customer not found";
 
     public CustomerDto addCustomer(CustomerDto customerDto) {
         Customer newCustomer = customerMapper.toEntity(customerDto);
@@ -27,24 +28,26 @@ public class CustomerService {
 
     public CustomerDto getCustomer(Long id) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Customer not found"));
+                .orElseThrow(() -> new CustomerNotFoundException(CUSTOMER_NOT_FOUND_ERROR_MESSAGE));
         return customerMapper.toDto(customer);
     }
 
     public List<CustomerDto> getAllCustomers() {
-        return customerRepository.findAll().stream().map(customerMapper::toDto).collect(Collectors.toList());
+        return customerRepository.findAll().stream()
+                .map(customerMapper::toDto)
+                .toList();
     }
 
     public void updateCustomer(Long id, CustomerDto customerDto) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Customer not found"));
+                .orElseThrow(() -> new CustomerNotFoundException(CUSTOMER_NOT_FOUND_ERROR_MESSAGE));
         customerMapper.partialUpdate(customer, customerDto);
         customerRepository.save(customer);
     }
 
     public void deleteCustomer(Long id) {
         if (!customerRepository.existsById(id)) {
-            throw new RuntimeException("Customer not found" );
+            throw new CustomerNotFoundException(CUSTOMER_NOT_FOUND_ERROR_MESSAGE);
         }
         customerRepository.deleteById(id);
     }
