@@ -1,15 +1,14 @@
 package com.bookservice.gametimebooking.service;
 
 import com.bookservice.gametimebooking.dto.ResourceDto;
+import com.bookservice.gametimebooking.exceptions.ResourceNotFoundException;
 import com.bookservice.gametimebooking.mapper.ResourceMapper;
 import com.bookservice.gametimebooking.model.Resource;
 import com.bookservice.gametimebooking.repository.ResourceRepository;
 import com.bookservice.gametimebooking.repository.ServiceRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -17,12 +16,12 @@ public class ResourceService {
 
     private ResourceRepository resourceRepository;
     private ServiceRepository serviceRepository;
-
     private ResourceMapper resourceMapper;
+    private static final String RESOURCE_NOT_FOUND_ERROR_MESSAGE = "Resource not found";
 
     public ResourceDto createResource(ResourceDto resourceDto) {
         com.bookservice.gametimebooking.model.Service service = serviceRepository.findById(resourceDto.getServiceId())
-                .orElseThrow(() -> new RuntimeException("Service not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND_ERROR_MESSAGE));
 
         Resource resource = resourceMapper.toEntity(resourceDto);
 
@@ -32,18 +31,20 @@ public class ResourceService {
     }
 
     public List<ResourceDto> getAllResources() {
-        return resourceRepository.findAll().stream().map(resourceMapper::toDto).collect(Collectors.toList());
+        return resourceRepository.findAll().stream()
+                .map(resourceMapper::toDto)
+                .toList();
     }
 
     public ResourceDto getResourceById(Long id) {
         Resource resource = resourceRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Resource not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND_ERROR_MESSAGE));
         return resourceMapper.toDto(resource);
     }
 
-    public void overwriteResourceById(Long id, ResourceDto request) {
+    public void overwriteResourceById(Long id) {
         Resource resource = resourceRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Resource not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NOT_FOUND_ERROR_MESSAGE));
 
         resource.setResourceName(resource.getResourceName());
 
@@ -52,7 +53,7 @@ public class ResourceService {
 
     public void deleteById(Long id) {
         if (!resourceRepository.existsById(id)) {
-            throw new RuntimeException("Resource not found");
+            throw new ResourceNotFoundException(RESOURCE_NOT_FOUND_ERROR_MESSAGE);
         }
         resourceRepository.deleteById(id);
     }
