@@ -1,15 +1,14 @@
 package com.bookservice.gametimebooking.service;
 
 import com.bookservice.gametimebooking.dto.ServiceDto;
+import com.bookservice.gametimebooking.exceptions.ServiceNotFoundException;
 import com.bookservice.gametimebooking.mapper.ServiceMapper;
 import com.bookservice.gametimebooking.model.House;
 import com.bookservice.gametimebooking.repository.HouseRepository;
 import com.bookservice.gametimebooking.repository.ServiceRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -18,10 +17,11 @@ public class ServiceService {
     private ServiceRepository serviceRepository;
     private ServiceMapper serviceMapper;
     private HouseRepository houseRepository;
+    private static final String SERVICE_NOT_FOUND_ERROR_MESSAGE = "Service not found";
 
     public ServiceDto createService(ServiceDto serviceDto) {
         House house = houseRepository.findById(serviceDto.getHouseId())
-                .orElseThrow(() -> new RuntimeException("House not found"));
+                .orElseThrow(() -> new ServiceNotFoundException(SERVICE_NOT_FOUND_ERROR_MESSAGE));
 
         com.bookservice.gametimebooking.model.Service service = serviceMapper.toEntity(serviceDto);
 
@@ -33,19 +33,19 @@ public class ServiceService {
     }
 
     public List<ServiceDto> getAllServices() {
-        return serviceRepository.findAll().stream().map(serviceMapper::toDto).collect(Collectors.toList());
+        return serviceRepository.findAll().stream().map(serviceMapper::toDto).toList();
     }
 
     public ServiceDto getServiceById(Long id) {
         com.bookservice.gametimebooking.model.Service service = serviceRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Service not found"));
+                .orElseThrow(() -> new ServiceNotFoundException(SERVICE_NOT_FOUND_ERROR_MESSAGE));
 
         return serviceMapper.toDto(service);
     }
 
     public void overwriteServiceById(Long id, ServiceDto serviceDto) {
         com.bookservice.gametimebooking.model.Service service = serviceRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Service not found"));
+                .orElseThrow(() -> new ServiceNotFoundException(SERVICE_NOT_FOUND_ERROR_MESSAGE));
 
         service.setServiceName(serviceDto.getServiceName());
 
@@ -54,16 +54,16 @@ public class ServiceService {
 
     public void deleteById(Long id) {
         if (!serviceRepository.existsById(id)) {
-            throw new RuntimeException("Service not found");
+            throw new ServiceNotFoundException(SERVICE_NOT_FOUND_ERROR_MESSAGE);
         }
         serviceRepository.deleteById(id);
     }
 
     public List<ServiceDto> getServicesByHouseId(Long houseId) {
         if (!houseRepository.existsById(houseId)) {
-            throw new RuntimeException("House not found");
+            throw new ServiceNotFoundException(SERVICE_NOT_FOUND_ERROR_MESSAGE);
         }
         List<com.bookservice.gametimebooking.model.Service> services = serviceRepository.findServicesByHouse_Id(houseId);
-        return services.stream().map(serviceMapper::toDto).collect(Collectors.toList());
+        return services.stream().map(serviceMapper::toDto).toList();
     }
 }
